--- a/modules/melis/client/less/meli.less
+++ b/modules/melis/client/less/meli.less
@@ -18,3 +18,22 @@ body {
     border-radius: 5px;
   }
 }
+
+.loading-container {
+  margin: 20px;
+  text-align: center;
+  font-size: 24px;
+
+  .loading-text-description{
+    margin: 10px;
+    width: 100%;
+    display: block;
+  }
+}
+
+.ch-loading-big {
+  background-image: url(/lib/chico/dist/assets/loading-big.gif);
+  width: 36px;
+  height: 36px;
+  display: inline-block;
+}
