--- a/modules/melis/client/directives/meli-carousel/views/meli-carousel.client.dtv.view.html
+++ b/modules/melis/client/directives/meli-carousel/views/meli-carousel.client.dtv.view.html
@@ -13,7 +13,7 @@
                  data-ng-data-enlarge="{{pic.url}}"
                  ng-src="{{pic.url}}"
                  ng-data-fixed-img="{{pic.url}}"
-                 ng-title="{{item.title}}">
+                 title="{{item.title}}">
         </div>
 
         <a href="#" id="arrowPrev" title="Anterior"><i class="ch-icon-chevron-left"></i></a>
